# medchain-openenv-final-round

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  README.md  __init__.py  blog.md  client.py  config.py  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  run_llm_eval.py  train.py  train_colab.py
.claude/: settings.json
media/: architecture.mmd
presentation/: linkedin_post.md  openenv_comment.md  presentation.html  presentation.md
server/: Dockerfile  __init__.py  app.py  clinical_arbiter.py  erp_formatter.py  grader.py  llm_client.py  medchain_env_environment.py  prompts.py  requirements.txt  simulation.py  tasks.py  ward_actor.py
tests/: test_openenv_hf_space.py
traces/: eval_gpt5mini_run1_rewards_0.70_0.56_0.51.txt  eval_gpt5mini_run2_partial.txt  hf_jobs_grpo_training_stdout.txt
train/: check_qwen.py  collect_rollouts.py  evaluate.py  run_trained_model.py  train_collab_reference.py  train_hf_jobs.py  train_hf_jobs_offline.py  training_and_eval_strategy.md
